<resources>
    <string name="app_name">FitKeeper</string>
    <string name="home_name">Home</string>
    <string name="user_info_name">User Info</string>
    <string name="workout_name">Workout</string>
    <string name="subscription_name">Subscription</string>
    <string name="settings_name">Settings</string>
    <string name="reset_password_name">Reset Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_info_button">User Info</string>
    <string name="workout_button">Workout Records</string>
    <string name="subscription_button">Subscription</string>
    <string name="login_button">Log in</string>
    <string name="send_button">Send</string>

    <string name="name_user_info">Name:</string>
    <string name="age_user_info">Age:</string>
    <string name="height_user_info">Height:</string>
    <string name="weight_user_info">Weight:</string>
    <string name="imc_user_info">IMC:</string>
    <string name="workouts_user_info">Workouts done:</string>

    <string name="exercise_name">Exercise</string>
    <string name="set_name">Sets</string>
    <string name="reps_name">Reps</string>
    <string name="weight_name">Weight</string>

    <string name="membership_plan_name">Membership plan:</string>
    <string name="membership_last_day_name">Membership expiration:</string>
    <string name="membership_renew_button_name">Renew membership</string>
    <string name="membership_renew_label_name">Renew</string>



    <string name="current_password_name">Current password</string>
    <string name="new_password_name">New password</string>
    <string name="repeat_password_name">Repeat new password</string>

    <string name="save_button_name">Save</string>
    <string name="logout_button_name">Log out</string>

    <string name="month_1">January</string>
    <string name="month_2">February</string>
    <string name="month_3">March</string>
    <string name="month_4">April</string>
    <string name="month_5">May</string>
    <string name="month_6">June</string>
    <string name="month_7">July</string>
    <string name="month_8">August</string>
    <string name="month_9">September</string>
    <string name="month_10">October</string>
    <string name="month_11">November</string>
    <string name="month_12">December</string>
    <string name="current_month">Data from:</string>
    <string name="current_day">Workout from:</string>
    <string-array name="months">
        <item>@string/month_1</item>
        <item>@string/month_2</item>
        <item>@string/month_3</item>
        <item>@string/month_4</item>
        <item>@string/month_5</item>
        <item>@string/month_6</item>
        <item>@string/month_7</item>
        <item>@string/month_8</item>
        <item>@string/month_9</item>
        <item>@string/month_10</item>
        <item>@string/month_11</item>
        <item>@string/month_12</item>
    </string-array>

    <string name="day_1">Monday</string>
    <string name="day_2">Tuesday</string>
    <string name="day_3">Wednesday</string>
    <string name="day_4">Thursday</string>
    <string name="day_5">Friday</string>
    <string name="day_6">Saturday</string>
    <string name="day_7">Sunday</string>

    <string-array name="week">
        <item>@string/day_1</item>
        <item>@string/day_2</item>
        <item>@string/day_3</item>
        <item>@string/day_4</item>
        <item>@string/day_5</item>
        <item>@string/day_6</item>
        <item>@string/day_7</item>
    </string-array>

    <string name="annual_plan">Annual plan</string>
    <string name="semester_plan">Semestral plan</string>
    <string name="monthly_plan">Monthly plan</string>
    <string-array name="plans">
        <item>@string/annual_plan</item>
        <item>@string/semester_plan</item>
        <item>@string/monthly_plan</item>
    </string-array>


    <string name="title_activity_subscription">SubscriptionActivity</string>

    <string name="reset_mail_success">Success! We sent you an email to recover your password</string>
    <string name="reset_mail_error">Error. This email is not registered</string>
    <string name="finish_workout_success">Your workout was finished and counted</string>
    <string name="finish_workout_error">Error. Your workout could not be saved</string>
    <string name="workout_finish">Finish Workout</string>

    <string name="card_label">Card number:</string>
    <string name="card_error_message">Invalid card number</string>
    <string name="default_price">U$ 800 </string>
    <string name="semester_price">U$ 500 </string>
    <string name="month_price">U$ 90 </string>
</resources>
