<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@color/backgroundOrange"
    tools:context="com.example.daniel.fitkeeper.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="#3b5998"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="70dp"
        android:backgroundTint="@color/black"
        android:id="@+id/view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"/>
    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:id="@+id/emailEdtTxt"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/border"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password_name"
        android:inputType="textPassword"
        android:id="@+id/crtPassEdtTxt"
        android:layout_below="@+id/emailEdtTxt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_name"
        android:inputType="textPassword"
        android:id="@+id/newPassEdtTxt"
        android:layout_below="@+id/crtPassEdtTxt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password_name"
        android:inputType="textPassword"
        android:id="@+id/rptPassEdtText"
        android:layout_below="@+id/newPassEdtTxt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_name"
        android:id="@+id/saveBtn"
        android:layout_above="@+id/backBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="49dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button_name"
        android:id="@+id/logoutBtn"
        android:layout_alignTop="@+id/saveBtn"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:id="@+id/backBtn"
        android:src="@drawable/ic_back_button"
        android:background="@color/mainOrange"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>