<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundOrange"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.daniel.fitkeeper.ResetPasswordActivity">

    <TextView
        android:id="@+id/screenTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset_password_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/emailEdtTxt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/border"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <TextView
        android:id="@+id/resultTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEdtTxt"
        android:layout_centerHorizontal="true"
        android:text="" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEdtTxt"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/send_button"
        android:textColor="@color/black"
        android:layout_alignEnd="@+id/emailEdtTxt"
        android:layout_alignStart="@+id/emailEdtTxt" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_toStartOf="@+id/emailEdtTxt"
        android:background="@drawable/button_bg_rounded_corners"
        android:src="@drawable/ic_back_button" />


</RelativeLayout>
