<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundOrange"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.daniel.fitkeeper.SubscriptionActivity">

    <!--
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="#3b5998"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="70dp"
        android:backgroundTint="@color/black"
        android:id="@+id/view">

    </android.support.v7.widget.Toolbar>
    -->

    <TextView
        android:id="@id/screenTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/subscription_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/membershipLstDayTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/membershipEdtTxt"
        android:layout_centerVertical="true"
        android:text="@string/membership_last_day_name"
        android:textSize="25sp" />

    <Button
        android:id="@+id/renewBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/membership_renew_button_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/membershipEdtTxt"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:layout_above="@+id/membershipLstDayTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp" />

    <TextView
        android:id="@+id/membershipTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/membership_plan_name"
        android:textSize="25sp"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/membershipEdtTxt"
        android:layout_alignStart="@+id/membershipEdtTxt" />

    <TextView
        android:id="@+id/membershipLstDayEdtTxt"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:inputType="date"
        android:padding="5dp"
        android:layout_below="@+id/membershipLstDayTxt"
        android:layout_alignStart="@+id/membershipLstDayTxt"
        android:layout_marginTop="13dp" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:src="@drawable/ic_back_button"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/screenTxt" />


</RelativeLayout>