<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundOrange"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.daniel.fitkeeper.HomeActivity">


    <!--
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="#3b5998"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="70dp"
        android:backgroundTint="@color/black"
        android:id="@+id/view">
    </android.support.v7.widget.Toolbar>
    -->

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>
        -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:src="@drawable/ic_settings_icon" />

        <Button
            android:id="@+id/btnSubscription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/subscription_button"
            android:textColor="@color/black"
            android:layout_above="@+id/settingsButton"
            android:layout_alignStart="@+id/btnWorkout"
            android:layout_marginBottom="62dp" />

        <Button
            android:id="@+id/btnWorkout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/workout_button"
            android:textColor="@color/black"
            android:layout_above="@+id/btnSubscription"
            android:layout_alignStart="@+id/btnHome"
            android:layout_marginBottom="34dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            app:srcCompat="@drawable/fitkeeper_logo"
            android:layout_marginTop="29dp"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/user_info_button"
            android:textColor="@color/black"
            android:layout_above="@+id/btnWorkout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp" />

        <!--<ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:src="@drawable/ic_logout_icon"
            android:layout_alignBottom="@+id/imageButton"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:background="@color/mainOrange"/>

            COLOCAR BOTAO DE DESLOGAR DENTRO DAS CONFIGURAÇÕES!-->

    </RelativeLayout>

</RelativeLayout>
